--- a/src/app/purchase-request/purchase-request-master/purchase-request.component.scss
+++ b/src/app/purchase-request/purchase-request-master/purchase-request.component.scss
@@ -18,8 +18,8 @@
 
 
   ::ng-deep .pr-inv-modal .modal-dialog { 
-     max-width: 80%;
-     width: 80%;
+     max-width: 90%;
+     width: 90%;
 }
 // .vl {
 //     border-left: 1.4px solid #cccccc;
